@@ -1,9 +1,9 @@
 /**********************************************************************
- * $Id$
  *
  * GEOS - Geometry Engine Open Source
  * http://geos.refractions.net
  *
+ * Copyright (C) 2011 Sandro Santilli <strk@keybit.net>
  * Copyright (C) 2006 Refractions Research Inc.
  *
  * This is free software; you can redistribute and/or modify it under
@@ -13,7 +13,7 @@
  *
  **********************************************************************
  *
- * Last port: operation/predicate/RectangleIntersects.java rev 1.4 (JTS-1.10)
+ * Last port: operation/predicate/RectangleIntersects.java r378 (JTS-1.12)
  *
  **********************************************************************/
 
@@ -37,12 +37,16 @@ namespace operation { // geos::operation
 namespace predicate { // geos::operation::predicate
 
 /** \brief
- * Optimized implementation of spatial predicate "intersects"
- * for cases where the first Geometry is a rectangle.
+ * Optimized implementation of the "intersects" spatial predicate
+ * for cases where one Geometry is a rectangle.
+ *
+ * This class works for all input geometries, including
+ * {@link GeometryCollection}s.
  * 
  * As a further optimization,
- * this class can be used directly to test many geometries against a single
- * rectangle.
+ * this class can be used to test
+ * many geometries against a single
+ * rectangle in a slightly more efficient way.
  *
  */
 class GEOS_DLL RectangleIntersects {
@@ -60,15 +64,6 @@ private:
 public:
 
 	/** \brief
-	 * Crossover size at which brute-force intersection scanning
-	 * is slower than indexed intersection detection.
-	 *
-	 * Must be determined empirically.  Should err on the
-	 * safe side by making value smaller rather than larger.
-	 */
-	static const std::size_t MAXIMUM_SCAN_SEGMENT_COUNT;
-
-	/** \brief
 	 * Create a new intersects computer for a rectangle.
 	 *
 	 * @param newRect a rectangular geometry
@@ -81,6 +76,13 @@ public:
 
 	bool intersects(const geom::Geometry& geom);
 
+	/** \brief
+	 * Tests whether a rectangle intersects a given geometry.
+	 *
+	 * @param rectangle a rectangular Polygon
+	 * @param b a Geometry of any type
+	 * @return true if the geometries intersect
+	 */
 	static bool intersects(const geom::Polygon &rectangle,
 			const geom::Geometry &b)
 	{
